[Cosmos] Fix z-index bug

--- a/resources/screen-common.less
+++ b/resources/screen-common.less
@@ -2479,7 +2479,6 @@ table.mw-interwikitable.body td.mw-interwikitable-local-yes {
 
 #mw-content-wrapper {
 	position: relative;
-	z-index: 3;
 	margin: 0 auto;
 }
 
